--- a/HCL.html
+++ b/HCL.html
@@ -685,6 +685,13 @@
 <p>R2B3</p>
 <p>3.11.1-2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
+<p>Lenovo ThinkCentre M93p<br /> (i7-4770, Haswell, GeForce GT 720)</p>
+<p>FBKT75AUS</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/MaJ9s7USf2s/2zgVX5SJTUkJ">dispose256</a></p>
 <p>Lenovo ThinkStation S30 4352G1G<br /> (E5-1620 v2, Ivytown, Radeon HD 6950)</p>
 <p>A2KT44AUS</p>
 <p>Yes</p>
