--- a/ExternalAudio.html
+++ b/ExternalAudio.html
@@ -11,3 +11,7 @@
 pactl load-module module-udev-detect</code></pre>
 <p>Start the audio application that is going to use the external audio device.</p>
 <p>Launch pavucontrol, for example using &quot;run command in VM&quot; of Qubes Manager and select you external audio card in pavucontrol. You need to do that only the first time you use a new external audio device, then pulse audio will remember you selection.</p>
+<p>If you detach your external audio device, then want to insert it again, or change it with another one, you need to repeat the previous commands in terminal, adding an other lite at the beginning:</p>
+<pre class="wiki"><code>pactl unload-module module-udev-detect
+sudo chmod a+rw /dev/snd/*
+pactl load-module module-udev-detect</code></pre>
