--- a/ExternalAudio.html
+++ b/ExternalAudio.html
@@ -2,16 +2,16 @@
 <h2 id="Whyyouwanttouseexternalaudiodevices">Why you want to use external audio devices</h2>
 <p>Qubes audio virtualization protocol does not implement latency reporting for security reasons, keeping the protocol as simple as possible. Also, in a compromise between low latency and low CPU usage, latency may be around 200 ms. So applications demanding higher audio quality need a better environment. But Qubes flexibility fully allows that using external audio devices. These are mostly USB audio cards, but firewire devices also might be used.</p>
 <h2 id="Implementingexternalaudiodevices">Implementing external audio devices</h2>
-<p>First you need to identify an user VM dedicated to audio and <a href="https://wiki.qubes-os.org/wiki/AssigningDevices">​assign a device</a> to it. In the most common case the assigned device is the USB controller to which the USB audio card will be connected.</p>
+<p>First you need to identify an user VM dedicated to audio and <a href="https://wiki.qubes-os.org/wiki/AssigningDevices">​assign a device</a> to it. In the most common case the assigned device is the USB controller to which your USB audio card will be connected.</p>
 <h3 id="FedoraVMs">Fedora VMs</h3>
 <p>In a terminal of the template from which you user VM depends, install pavucontrol with:</p>
 <pre class="wiki"><code>sudo yum install pavucontrol</code></pre>
-<p>Close the template and start or restart your user VM, insert your external audio, open a terminal and prepare pulseaudio to use it with:</p>
+<p>Close the template and start or restart your user VM, insert your external audio device, open a terminal and prepare pulseaudio to use it with:</p>
 <pre class="wiki"><code>sudo chmod a+rw /dev/snd/*
 pactl load-module module-udev-detect</code></pre>
 <p>Start the audio application that is going to use the external audio device.</p>
 <p>Launch pavucontrol, for example using &quot;run command in VM&quot; of Qubes Manager and select you external audio card in pavucontrol. You need to do that only the first time you use a new external audio device, then pulse audio will remember you selection.</p>
-<p>If you detach your external audio device, then want to insert it again, or change it with another one, you need to repeat the previous commands in terminal, adding an other lite at the beginning:</p>
+<p>If you detach your external audio device, then want to insert it again, or change it with another one, you need to repeat the previous commands in terminal, adding an other line at the beginning:</p>
 <pre class="wiki"><code>pactl unload-module module-udev-detect
 sudo chmod a+rw /dev/snd/*
 pactl load-module module-udev-detect</code></pre>
