--- a/ExternalAudio.html
+++ b/ExternalAudio.html
@@ -1,6 +1,6 @@
 <h1 id="UsingExternalAudioDevices">Using External Audio Devices</h1>
 <h2 id="Whyyouwanttouseexternalaudiodevices">Why you want to use external audio devices</h2>
-<p>Qubes audio virtualization protocol does not implement latency reporting for security reasons, keeping the protocol as simple as possible. Also, in a compromise between low latency and low CPU usage, latency may be around 200 ms. So applications demanding higher audio quality need a better environment. But Qubes flexibility fully allows that using external audio devices. These are mostly USB audio cards, but firewire devices also might be used.</p>
+<p>Qubes audio virtualization protocol does not implement latency reporting for security reasons, keeping the protocol as simple as possible. Also, in a compromise between low latency and low CPU usage, latency may be around 200 ms. So applications demanding higher audio quality (even Skype) need a better environment. But Qubes flexibility fully allows that using external audio devices. These are mostly USB audio cards, but firewire devices also might be used.</p>
 <h2 id="Implementingexternalaudiodevices">Implementing external audio devices</h2>
 <p>First you need to identify an user VM dedicated to audio and <a href="https://wiki.qubes-os.org/wiki/AssigningDevices">​assign a device</a> to it. In the most common case the assigned device is the USB controller to which your USB audio card will be connected.</p>
 <h3 id="FedoraVMs">Fedora VMs</h3>
