--- a/SystemRequirements.html
+++ b/SystemRequirements.html
@@ -4,6 +4,7 @@
 <li>64-bit Intel or AMD processor (x86_64 aka x64 aka AMD64)</li>
 <li>4 GB RAM</li>
 <li>32 GB disk space</li>
+<li>legacy boot mode (UEFI not supported yet - #794)</li>
 </ul>
 <h2 id="Recommended">Recommended</h2>
 <ul>
