--- a/HCL.html
+++ b/HCL.html
@@ -196,6 +196,15 @@
 <p>R1</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​read more</a></p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​Steven Collins</a></p>
+<p>Dell Latitude E7440<br /> (i7-4600U, Haswell, embedded VGA)</p>
+<p>A09</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>*</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>TPM present, AEM untested</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/IwQuI3J1HAY/1HDs-IzRIlsJ">Bjarne Thomsen</a></p>
 <p>Dell Precision M4600<br /> (i7-2860QM, NVIDIA Quadro 1000M)</p>
 <p>Yes</p>
 <p>R1</p>
@@ -397,7 +406,7 @@
 <p>3.11</p>
 <p>802.11 ac doesn't work with Fedora 18, but with Fedora 20</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/r6kC4YHgDjM/yJXpvIdoWkUJ">​7v5w7go9ub0o</a></p>
-<p>LENOVO Thinkpad T440p (20AN00C1MD)<br /> (i7-4710MQ, QM87, GeForce GT 730M)</p>
+<p>Lenovo Thinkpad T440p (20AN00C1MD)<br /> (i7-4710MQ, QM87, GeForce GT 730M)</p>
 <p>GLET70WW (2.24 )</p>
 <p>Yes</p>
 <p>No</p>
@@ -462,6 +471,15 @@
 <p>Lenovo Thinkpad X61t<br /> ()</p>
 <p>R2B1</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/4IrF1A6sa3U/QIQe-dNc4tEJ">​George Walker</a></p>
+<p>Lenovo Thinkpad X121e<br /> (i3-2367M, Sandy Bridge, HD 3000)</p>
+<p>8QET56WW (1.17 )</p>
+<p>Yes</p>
+<p>No</p>
+<p>*</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>TPM present, AEM untested</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/NnUzPPY8yTo/Swe2IvsjLi4J">Rowan Crane</a></p>
 <p>Lenovo Thinkpad X201<br /> (i5-520M, HD3000)</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -499,7 +517,7 @@
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​Franz Felix</a></p>
-<p>LENOVO Thinkpad Yoga<br /> (i5-4200U, Haswell, embedded VGA)</p>
+<p>Lenovo Thinkpad Yoga<br /> (i5-4200U, Haswell, embedded VGA)</p>
 <p>GQET35WW (1.15 )</p>
 <p>Yes</p>
 <p>No</p>
