--- a/HCL.html
+++ b/HCL.html
@@ -241,6 +241,14 @@
 <p>R2B3</p>
 <p>3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>HP Chromebook<br /> (Celeron 2955U, Haswell, Intel HD Graphics)</p>
+<p>Yes</p>
+<p>No</p>
+<p>No</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/oWLkwl8vY0A/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/oWLkwl8vY0A/QaHRacZgM70J">Andrew B</a></p>
 <p>HP EliteBook 2170p<br /> (i5-3317U, Ivy, Intel HD Graphics)</p>
 <p>68IMT Ver. F.42</p>
 <p>Yes</p>
