--- a/HCL.html
+++ b/HCL.html
@@ -47,7 +47,7 @@
 <p><br /></p>
 <h2 id="Reports">Reports</h2>
 <h1>Qubes HCL</h1>
-<p>Device</p>
+<p><strong>Laptop Devices</strong></p>
 <p>BIOS version</p>
 <p>HVM</p>
 <p>IOMMU</p>
@@ -56,7 +56,6 @@
 <p>dom0 kernel</p>
 <p>Remarks</p>
 <p>Reported by</p>
-<p><strong>Laptop Devices</strong></p>
 <p>Apple MacBookPro<br /> (i5-3210M, Ivy Bridge, Intel HD Graphics)</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -641,7 +640,16 @@
 <p>Yes</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/uKI-VBtKWxg/uKjsdGNSpSQJ">​Ant</a></p>
+<p> </p>
 <p><strong>Desktop, Workstation and Server</strong></p>
+<p>BIOS version</p>
+<p>HVM</p>
+<p>IOMMU</p>
+<p>TPM</p>
+<p><strong>Qubes version</strong></p>
+<p>dom0 kernel</p>
+<p>Remarks</p>
+<p>Reported by</p>
 <p>Apple Mac mini (late 2012)<br /> (i7-3615QM, Ivy Bridge, HD Graphics)</p>
 <p>MM61.88Z.0106. B03.1211161202</p>
 <p>Yes</p>
@@ -727,7 +735,16 @@
 <p>3.12.14-4</p>
 <p>Issue with sound, network and marvel raid. AEM untested.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/EDxALP9GNFo/gAH7nZXd0CkJ">​Hans Walter</a></p>
+<p> </p>
 <p><strong>Motherboards</strong></p>
+<p>BIOS version</p>
+<p>HVM</p>
+<p>IOMMU</p>
+<p>TPM</p>
+<p><strong>Qubes version</strong></p>
+<p>dom0 kernel</p>
+<p>Remarks</p>
+<p>Reported by</p>
 <p>ASRock G31M-GS<br /> (LGA775, G31, GMA3100)</p>
 <p>P1.90</p>
 <p>Yes</p>
