--- a/HCL.html
+++ b/HCL.html
@@ -180,15 +180,9 @@
 <p>A11</p>
 <p>Yes</p>
 <p>Yes</p>
-<p>R2B2</p>
-<p>3.7.4</p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/pAVGe04ZC48/AJwY6yd7LeIJ">​Zrubi</a></p>
-<p>R2B3</p>
-<p>3.7.4</p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/pAVGe04ZC48/AJwY6yd7LeIJ">​Zrubi</a></p>
-<p>R2rc1</p>
-<p>3.12.14</p>
-<p>The optional nVidia Optimus VGA is still not working.</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>The optional nVidia Optimus VGA is (still) not working.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/sfV4-pMWrBY/qiHlnnza9a0J">​Zrubi</a></p>
 <p>Dell Latitude E6520<br /> ()</p>
 <p>Yes</p>
