--- a/HCL.html
+++ b/HCL.html
@@ -234,7 +234,7 @@
 <p>R2B3</p>
 <p>3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
-<p>HP Chromebook<br /> (Celeron 2955U, Haswell, Intel HD Graphics)</p>
+<p>HP Chromebook 14<br /> (Celeron 2955U, Haswell, Intel HD Graphics)</p>
 <p>Yes</p>
 <p>No</p>
 <p>No</p>
@@ -411,10 +411,10 @@
 <p>GLET70WW (2.24 )</p>
 <p>Yes</p>
 <p>No</p>
-<p>*</p>
+<p>Yes</p>
 <p>R2</p>
 <p>3.12.23-1</p>
-<p>TPM untested, a i5-4300M, i5-4330M, i7-4600M, i7-4800MQ or i7-4900MQ CPU could support VT-d</p>
+<p>a i5-4300M, i5-4330M, i7-4600M, i7-4800MQ or i7-4900MQ CPU could support VT-d</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/izj-g0HNA_4/HCrOjLk9Pm4J">Bjarne Thomsen</a></p>
 <p>Lenovo Thinkpad T500<br /> (P8400, GM45, GMA 4500MHD)</p>
 <p>3.22</p>
