--- a/HCL.html
+++ b/HCL.html
@@ -242,14 +242,6 @@
 <p>3.12.23-1</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/oWLkwl8vY0A/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/oWLkwl8vY0A/QaHRacZgM70J">Andrew B</a></p>
-<p>HP EliteBook 2170p<br /> (i5-3317U, Ivy, Intel HD Graphics)</p>
-<p>68IMT Ver. F.42</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>R2rc2</p>
-<p>3.12.23-1</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/q5M9KbPatEA/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/q5M9KbPatEA/fXIZ-yvJVA8J">Dimiter Georgiev</a></p>
 <p>HP EliteBook 820 G1<br /> (i5-4300U, Haswell, Intel HD Graphics)</p>
 <p>L71 Ver. 01.11</p>
 <p>Yes</p>
@@ -258,6 +250,22 @@
 <p>3.12.23-1</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/8s98SegfdbI/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/8s98SegfdbI/pIOWgeJSuSAJ">Mihai Genescu</a></p>
+<p>HP EliteBook 850 G1<br /> (i7-4600U, Haswell, Intel HD Graphics + Radeon HD 8730M)</p>
+<p>L71 Ver. 01.20</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.17.1-1</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/Bfikyrwhoc8/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/Bfikyrwhoc8/q-zhFrA0SK4J">Olivier Médoc</a></p>
+<p>HP EliteBook 2170p<br /> (i5-3317U, Ivy, Intel HD Graphics)</p>
+<p>68IMT Ver. F.42</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2rc2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/q5M9KbPatEA/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/q5M9KbPatEA/fXIZ-yvJVA8J">Dimiter Georgiev</a></p>
 <p>HP EliteBook 8540p<br /> (i5-2540M, Arrandale, NVIDIA GT216)</p>
 <p>F.0C</p>
 <p>Yes</p>
