--- a/UserDoc.html
+++ b/UserDoc.html
@@ -87,6 +87,10 @@
 <li><a href="/wiki/wiki/VMSudo">Note regarding password-less root access in VM</a></li>
 </ol></li>
 </ol></li>
+<li><strong>Applications</strong>
+<ol>
+<li>[Languages]</li>
+</ol></li>
 <li><strong>Hardware</strong>
 <ol>
 <li><a href="/wiki/wiki/StickMounting">How to Mount USB Sticks to AppVMs</a></li>
