--- a/UserDoc.html
+++ b/UserDoc.html
@@ -89,7 +89,7 @@
 </ol></li>
 <li><strong>Applications</strong>
 <ol>
-<li>[Languages]</li>
+<li><a href="/wiki/wiki/LanguageLocalization">Languages</a></li>
 </ol></li>
 <li><strong>Hardware</strong>
 <ol>
