--- a/SoftwareUpdateVM.html
+++ b/SoftwareUpdateVM.html
@@ -4,6 +4,7 @@
 <p>In addition to saving on the disk space, and reducing domain creation time, another advantage of such scheme is the possibility for centralized software update. It's just enough to do the update in the template VM, and then all the AppVMs based on this template get updates automatically after they are restarted.</p>
 <p>The default template is called <strong>fedora-14-x64</strong> in Qubes R1 and <strong>fedora-20-x64</strong> in Qubes R2.</p>
 <p>The side effect of this mechanism is, of course, that if you install any software in your AppVM, more specifically in any directory other than <code>/home</code> or <code>/usr/local</code> then it will disappear after the AppVM reboot (as the root filesystem for this AppVM will again be &quot;taken&quot; from the Template VM). <strong>This means one normally install software in the Template VM, not in AppVMs.</strong></p>
+<p>Unlike VM private filesystems, the template VM root filesystem does not support discard, so deleting files does not free the space in dom0. See <a href="/wiki/wiki/FedoraTemplateUpgrade#Compactingtemplatesroot.img">these instructions</a> to recover space in dom0.</p>
 <h2 id="InstallingorupdatingsoftwareinthetemplateVM">Installing (or updating) software in the template VM</h2>
 <p>In order to permanently install new software, you should:</p>
 <ul>
