--- a/VPN.html
+++ b/VPN.html
@@ -10,7 +10,7 @@
 <h3 id="AppVM">AppVM</h3>
 <p>While the Network Manager is not started here (for a good reason) You can configure any kind of VPN client in your AppVM as well, however it is only suggested if you have to use a special VPN client.</p>
 <h3 id="ProxyVM">ProxyVM</h3>
-<p><strong>WARNING:</strong> <em>Currently the <a href="/wiki/wiki/NetworkManager">NetworkManager?</a> not working in a ProxyVM as expected. Actually it will mess up the routing table and because of that your packets may not be routed to the VPN tunnel. - This surely occures if your VPN wanna to be the default gateway.</em></p>
+<p><strong>WARNING:</strong> <em>Currently the <a href="/wiki/wiki/NetworkManager">NetworkManager?</a> is not working in ProxyVMs as expected. Actually it will mess up the routing table and because of that your packets may not be routed to the VPN tunnel. - This surely occurs if your VPN wants to be the default gateway.</em></p>
 <p>One of the best thing in Qubes that you can use a special type of VMs called ProxyVM (or FirewallVM). The special thing is that your AppVMs see this as a NetVM, and the NetVMs see it as an AppVM. Because of that You can place a ProxyVM between your AppVMs and Your NetVM. This is how the default firewall VM is working.</p>
 <p>Using a ProxyVM to set up a VPN client will gives you the ability to:</p>
 <ul>
