--- a/UserFaq.html
+++ b/UserFaq.html
@@ -24,6 +24,7 @@
 <li><a href="#CanIinstallQubesonasystemwithoutVT-d">Can I install Qubes on a system without VT-d?</a></li>
 <li><a href="#CanIuseAMD-vinsteadofVT-x">Can I use AMD-v instead of VT-x?</a></li>
 <li><a href="#CanIinstallQubesinavirtualmachinee.g.onVMWare">Can I install Qubes in a virtual machine (e.g., on VMWare)?</a></li>
+<li><a href="#Whydoesmynetworkadapternotworkwiredwireless">Why does my network adapter not work (wired, wireless)?</a></li>
 </ol></li>
 <li><a href="#CommonProblems">Common Problems</a>
 <ol>
@@ -79,6 +80,9 @@
 <p>See <a href="http://groups.google.com/group/qubes-devel/msg/6412170cfbcb4cc5">​this message</a>.</p>
 <h3 id="CanIinstallQubesinavirtualmachinee.g.onVMWare">Can I install Qubes in a virtual machine (e.g., on VMWare)?</h3>
 <p>Some users have been able to do this, but it is neither recommended nor supported. Qubes should be installed bare-metal. (After all, it uses its own bare-metal hypervisor!)</p>
+<h3 id="Whydoesmynetworkadapternotworkwiredwireless">Why does my network adapter not work (wired, wireless)?</h3>
+<p>You may have an adapter, that is not compatible with open-source drivers shipped by Qubes. There may be a binary blob, which provides drivers in the linux-firmware package.</p>
+<p>Open a terminal and run <code>sudo yum install linux-firmware</code> in the TemplateVM upon which your NetVM is based. You have to restart the NetVM after the TemplateVM has been shut down.</p>
 <h2 id="CommonProblems">Common Problems</h2>
 <h3 id="MyAppVMslostInternetaccessafteraTemplateVMupdate.WhatshouldIdo">My AppVMs lost Internet access after a TemplateVM update. What should I do?</h3>
 <p>Run <code>systemctl enable NetworkManager-dispatcher.service</code> in the TemplateVM upon which your NetVM is based. You may have to reboot afterward for the change to take effect. (Note: This is an upstream problem. See <a href="https://bugzilla.redhat.com/show_bug.cgi?id=974811">​here</a>. For details, see the qubes-users mailing list threads <a href="https://groups.google.com/d/topic/qubes-users/xPLGsAJiDW4/discussion">​here</a> and <a href="https://groups.google.com/d/topic/qubes-users/uN9G8hjKrGI/discussion">​here</a>.)</p>
