--- a/QubesLicensing.html
+++ b/QubesLicensing.html
@@ -7,3 +7,5 @@
 <ul>
 <li>Qubes Windows Support Tools</li>
 </ul>
+<h2 id="Noteonrightstodouble-licensingoftheQubescode">Note on rights to double-licensing of the Qubes code</h2>
+<p>Invisible Things Lab (ITL), who has funded and run the Qubes project since the beginning, and who has contributed majority of Qubes-specific code (specifically: <code>core-*</code>, <code>gui-*</code>, and <code>qubes-*</code> repositories) would like to have a right to redistribute parts of this code under proprietary licenses. This is especially important for Qubes R3 and later, where the new architecture allows the creation of many editions of Qubes, using different hypervisors, some of which might not be open source. That's why we ask every developer who contributes code to Qubes project to grant ITL permission to reuse the code under a different license, and to express this consent by including the <a href="http://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/tree/Documentation/SubmittingPatches?id=HEAD#n358">​standard signed-off line</a> in the commit.</p>
