--- a/QubesR3Building.html
+++ b/QubesR3Building.html
@@ -1,4 +1,6 @@
 <h1 id="BuildingQubesOS3.0ISO">Building Qubes OS 3.0 ISO</h1>
+<p>Ensure your system is rpm-based and that you have necessary dependencies installed (see <a href="/wiki/wiki/QubesBuilder">QubesBuilder</a> for more info):</p>
+<pre class="wiki"><code>sudo yum install git createrepo rpm-build make wget rpmdevtools pandoc</code></pre>
 <p>Get the necessary keys to verify the sources:</p>
 <pre class="wiki"><code>$ wget https://keys.qubes-os.org/keys/qubes-master-signing-key.asc
 $ gpg --import qubes-master-signing-key.asc 
