--- a/HCL.html
+++ b/HCL.html
@@ -219,6 +219,15 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/21kqNBzJLPw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/21kqNBzJLPw/e74SMRweTMsJ">​Brian J Smith-Sweeney</a></p>
+<p>Dell XPS 17 L701X<br /> (i5-480M, Arrandale, NVIDIA GT 435M)</p>
+<p>A10</p>
+<p>Yes</p>
+<p>No</p>
+<p># best achievable QSL - (Qubes Security Level) --&gt;</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>wired network adapter not assigned to netvm by default?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/o5rew2izuQc/b9nHv-8cNXQJ">Mike Grobstein</a></p>
 <p>Fujitsu S751<br /> (i5-2520M, QM67, HD3000)</p>
 <p>1.18</p>
 <p>Yes</p>
