--- a/HCL.html
+++ b/HCL.html
@@ -396,6 +396,7 @@
 <p>2.05</p>
 <p>Yes</p>
 <p>Yes</p>
+<p>Yes</p>
 <p>R2B1</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/Z9seyOT46Ro/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/Z9seyOT46Ro/wX6tsrxE84sJ">​cprise</a></p>
@@ -408,6 +409,7 @@
 <p>2.58</p>
 <p>R2rc1</p>
 <p>3.12.14-4</p>
+<p>AEM works</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/452tkVCzvOw/_dQ8DXaDzp0J">​cprise</a></p>
 <p>Lenovo Thinkpad T430u<br /> (i7-3517M, Ivy Bridge, HD Graphics + GT 620M)</p>
 <p>2.08</p>
