--- a/HCL.html
+++ b/HCL.html
@@ -523,6 +523,7 @@
 <p>2.5.1</p>
 <p>Yes</p>
 <p>Yes</p>
+<p>Yes</p>
 <p>R1</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a></p>
@@ -531,6 +532,7 @@
 <p><a href="https://groups.google.com/d/msg/qubes-users/hf0vkL3TE7k/VOtrW3wEbtMJ">​mgflax</a></p>
 <p>Lenovo Thinkpad X230 (2306CTO)<br /> (i7-3520M, Ivy Bridge, HD Graphics)</p>
 <p>2.54</p>
+<p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>R2rc1</p>
