--- a/HCL.html
+++ b/HCL.html
@@ -426,15 +426,19 @@
 <p>3.11</p>
 <p>802.11 ac doesn't work with Fedora 18, but with Fedora 20</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/r6kC4YHgDjM/yJXpvIdoWkUJ">​7v5w7go9ub0o</a></p>
-<p>Lenovo Thinkpad T440p (20AN00C1MD)<br /> (i7-4710MQ, QM87, GeForce GT 730M)</p>
+<p>Lenovo Thinkpad T440p (20AN00C1MD)<br /> (i7-4900MQ, QM87, GeForce GT 730M)</p>
 <p>GLET70WW (2.24 )</p>
 <p>Yes</p>
-<p>No</p>
+<p>Yes</p>
 <p>Yes</p>
 <p>R2</p>
 <p>3.12.23-1</p>
-<p>a i5-4300M, i5-4330M, i7-4600M, i7-4800MQ or i7-4900MQ CPU could support VT-d</p>
+<p>no VT-d with i7-4710MQ; a i5-4300M, i5-4330M, i7-4600M, i7-4800MQ or i7-4900MQ CPU could support VT-d</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/izj-g0HNA_4/HCrOjLk9Pm4J">Bjarne Thomsen</a></p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>TPM working, updated to i7-4900MQ with Vt-d working</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/LYQwA7-9wYA/RX1eXauxtXIJ">Bjarne Thomsen</a></p>
 <p>Lenovo Thinkpad T500<br /> (P8400, GM45, GMA 4500MHD)</p>
 <p>3.22</p>
 <p>Yes</p>
