--- a/HCL.html
+++ b/HCL.html
@@ -392,6 +392,14 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/LSVluAZ9Udo/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LSVluAZ9Udo/Fl3jmt4tWssJ">Alex Dubois</a></p>
+<p>Lenovo Thinkpad T430 (2349NL5)<br /> (i5-3320M, QM77, HD Graphics)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>If VT-d is not working, disable it, save, reboot, shutdown, enable it, save, reboot</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/suzkdQ0pnX0/qYtGzY6KHvEJ">Ethan Lewis</a></p>
 <p>Lenovo Thinkpad T430s <br /> (i5-3320M, QM77, HD4000)</p>
 <p>2.05</p>
 <p>Yes</p>
