--- a/HCL.html
+++ b/HCL.html
@@ -559,6 +559,14 @@
 <p>3.12.23-1</p>
 <p>touchscreen not working</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/kTRBgRc7jyY/aBp61c6iYL4J">Gábor Dolhai</a></p>
+<p>Lenovo Thinkpad Yoga S1<br /> (i7-4600U)</p>
+<p>BOET20WW</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/HErPNxdpfGY/ZNcUubPBAwUJ">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/HErPNxdpfGY/ZNcUubPBAwUJ">fowlslegs</a></p>
 <p>Lenovo Yoga 2<br /> (i3-4010U, Haswell, HD Graphics)</p>
 <p>96CN23WW(V1.09)</p>
 <p>Yes</p>
