--- a/HCL.html
+++ b/HCL.html
@@ -219,6 +219,14 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/21kqNBzJLPw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/21kqNBzJLPw/e74SMRweTMsJ">​Brian J Smith-Sweeney</a></p>
+<p>Dell XPS 15 (9530)<br /> (i7-4702HQ, Haswell, embedded VGA)</p>
+<p>A04</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>problem booting from external drive</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/__kXMAH00cQ/LyU0xL4GQbQJ">Subjunctive Post</a></p>
 <p>Dell XPS 17 L701X<br /> (i5-480M, Arrandale, NVIDIA GT 435M)</p>
 <p>A10</p>
 <p>Yes</p>
@@ -700,6 +708,13 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/Nq7T0l4A2b0/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/Nq7T0l4A2b0/IP_pwZMn9LYJ">KR</a></p>
+<p>Dell Inspiron 3847<br /> (i7-4790, Haswell, HD Graphics)</p>
+<p>A05</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/JQ-EQfuQIXA/Xg1uEMJyplcJ">​Nate Bedrossian</a></p>
 <p>Dell PowerEdge T110 II<br /> (Xeon E3-1230, onboard Matrox)</p>
 <p>Yes</p>
 <p>R1</p>
@@ -814,6 +829,14 @@
 <p>R2rc1</p>
 <p>with Phenom II X4 965 and Radeon HD 5750</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/6UPz3B0hg_U/bNcRAMiYJekJ">David Kennedy</a></p>
+<p>ASUS P5GC-MX/1333<br /> (E8400, 945GC, embedded VGA)</p>
+<p>0413</p>
+<p>Yes</p>
+<p>No</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>does boot and generates hcl-report</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/dRyb4FQJ_Go/EM-NVcVGI9EJ">Motiv8</a></p>
 <p>ASUS SABERTOOTH 990FX R2.0<br /> (FX-8350, 990FX, GeForce GTX 470)</p>
 <p>2301</p>
 <p>Yes</p>
